Se pone nombre completo

--- a/index.html
+++ b/index.html
@@ -1,12 +1,49 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Cristiano Ronaldo - CR7</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            background-color: #111;
+            color: white;
+        }
+
+        header {
+            background-color: black;
+            text-align: center;
+            padding: 20px;
+        }
+
+        h1 {
+            color: gold;
+        }
+
+        section {
+            margin: 15px;
+            padding: 15px;
+            background-color: #1e1e1e;
+            border-radius: 8px;
+        }
+
+        h2 {
+            color: gold;
+        }
+
+        footer {
+            text-align: center;
+            padding: 15px;
+            background-color: black;
+        }
+    </style>
 </head>
 <body>
-    <H1>Taller 2 CR7</H1>
-    <p>THE GOAT</p>
-</body>
-</html>
+
+<header>
+    <h1>Cristiano Ronaldo (CR7)</h1>
+    <p>Biografía, Carrera y Familia</p>
+</header>
+
+<section><h2>Biografía 1: Nombre Completo</h2><p>Cristiano Ronaldo dos Santos Aveiro.</p></section>
