--- a/index.html
+++ b/index.html
@@ -48,4 +48,4 @@
 
 <section><h2>Biografía 1: Nombre Completo</h2><p>Cristiano Ronaldo dos Santos Aveiro.</p></section>
 <section><h2>Biografía 2: Nacimiento</h2><p>Nació el 5 de febrero de 1985 en Madeira, Portugal.</p></section>
-
+<section><h2>Biografía 3: Padres</h2><p>Hijo de José Dinis Aveiro y Maria Dolores dos Santos.</p></section>
