--- a/index.html
+++ b/index.html
@@ -50,4 +50,6 @@
 <section><h2>Biografía 2: Nacimiento</h2><p>Nació el 5 de febrero de 1985 en Madeira, Portugal.</p></section>
 <section><h2>Biografía 3: Padres</h2><p>Hijo de José Dinis Aveiro y Maria Dolores dos Santos.</p></section>
 <section><h2>Biografía 4: Hermanos</h2><p>Tiene tres hermanos: Hugo, Elma y Katia.</p></section>
+<section><h2>Biografía 5: Infancia</h2><p>Creció en un entorno humilde y mostró talento desde pequeño.</p></section>
+
 
