Se pone su personalidad

--- a/index.html
+++ b/index.html
@@ -51,5 +51,6 @@
 <section><h2>Biografía 3: Padres</h2><p>Hijo de José Dinis Aveiro y Maria Dolores dos Santos.</p></section>
 <section><h2>Biografía 4: Hermanos</h2><p>Tiene tres hermanos: Hugo, Elma y Katia.</p></section>
 <section><h2>Biografía 5: Infancia</h2><p>Creció en un entorno humilde y mostró talento desde pequeño.</p></section>
+<section><h2>Biografía 6: Personalidad</h2><p>Es conocido por su disciplina y mentalidad competitiva.</p></section>
 
 
