Se agrega condicion fisica

--- a/index.html
+++ b/index.html
@@ -53,5 +53,6 @@
 <section><h2>Biografía 5: Infancia</h2><p>Creció en un entorno humilde y mostró talento desde pequeño.</p></section>
 <section><h2>Biografía 6: Personalidad</h2><p>Es conocido por su disciplina y mentalidad competitiva.</p></section>
 <section><h2>Biografía 7: Formación</h2><p>Ingresó a la academia del Sporting de Lisboa a temprana edad.</p></section>
+<section><h2>Biografía 8: Físico</h2><p>Destaca por su gran condición física y capacidad atlética.</p></section>
 
 
