--- a/index.html
+++ b/index.html
@@ -55,5 +55,6 @@
 <section><h2>Biografía 7: Formación</h2><p>Ingresó a la academia del Sporting de Lisboa a temprana edad.</p></section>
 <section><h2>Biografía 8: Físico</h2><p>Destaca por su gran condición física y capacidad atlética.</p></section>
 <section><h2>Biografía 9: Mentalidad</h2><p>Siempre ha demostrado ambición por ser el mejor.</p></section>
+<section><h2>Biografía 10: Impacto Mundial</h2><p>Es considerado uno de los mejores futbolistas de la historia.</p></section>
 
 
