Actualizacion index (prueba)

--- a/index.html
+++ b/index.html
@@ -48,5 +48,18 @@
 
 <section><h2>Carrera 1: Sporting Lisboa</h2><p>Debutó profesionalmente en 2002.</p></section>
 
+<section><h2>Biografía 1: Nombre Completo</h2><p>Cristiano Ronaldo dos Santos Aveiro.</p></section>
+<section><h2>Biografía 2: Nacimiento</h2><p>Nació el 5 de febrero de 1985 en Madeira, Portugal.</p></section>
+<section><h2>Biografía 3: Padres</h2><p>Hijo de José Dinis Aveiro y Maria Dolores dos Santos.</p></section>
+<section><h2>Biografía 4: Hermanos</h2><p>Tiene tres hermanos: Hugo, Elma y Katia.</p></section>
+<section><h2>Biografía 5: Infancia</h2><p>Creció en un entorno humilde y mostró talento desde pequeño.</p></section>
+<section><h2>Biografía 6: Personalidad</h2><p>Es conocido por su disciplina y mentalidad competitiva.</p></section>
+<section><h2>Biografía 7: Formación</h2><p>Ingresó a la academia del Sporting de Lisboa a temprana edad.</p></section>
+<section><h2>Biografía 8: Físico</h2><p>Destaca por su gran condición física y capacidad atlética.</p></section>
+<section><h2>Biografía 9: Mentalidad</h2><p>Siempre ha demostrado ambición por ser el mejor.</p></section>
+<section><h2>Biografía 10: Impacto Mundial</h2><p>Es considerado uno de los mejores futbolistas de la historia.</p></section>
+
+</body>
+</html>
 
 
