Información de la madre

--- a/index.html
+++ b/index.html
@@ -60,6 +60,8 @@
 <section><h2>Biografía 9: Mentalidad</h2><p>Siempre ha demostrado ambición por ser el mejor.</p></section>
 <section><h2>Biografía 10: Impacto Mundial</h2><p>Es considerado uno de los mejores futbolistas de la historia.</p></section>
 
+<section><h2>Familia 1: Madre</h2><p>Maria Dolores es una figura muy importante en su vida.</p></section>
+
 </body>
 </html>
 
