Primer balon de Oro

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
 
 <section><h2>Carrera 1: Sporting Lisboa</h2><p>Debutó profesionalmente en 2002.</p></section>
 <section><h2>Carrera 2: Fichaje al Manchester United</h2><p>Fue fichado en 2003 por Sir Alex Ferguson.</p></section>
+<section><h2>Carrera 3: Primer Balón de Oro</h2><p>Ganó su primer Balón de Oro en 2008.</p></section>
 
 <section><h2>Biografía 1: Nombre Completo</h2><p>Cristiano Ronaldo dos Santos Aveiro.</p></section>
 <section><h2>Biografía 2: Nacimiento</h2><p>Nació el 5 de febrero de 1985 en Madeira, Portugal.</p></section>
