Fallecimiento del padre

--- a/index.html
+++ b/index.html
@@ -61,6 +61,8 @@
 <section><h2>Biografía 10: Impacto Mundial</h2><p>Es considerado uno de los mejores futbolistas de la historia.</p></section>
 
 <section><h2>Familia 1: Madre</h2><p>Maria Dolores es una figura muy importante en su vida.</p></section>
+<section><h2>Familia 2: Padre</h2><p>Su padre falleció en 2005.</p></section>
+
 
 </body>
 </html>
