Ganador de 5 Champions League

--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
 <section><h2>Carrera 3: Primer Balón de Oro</h2><p>Ganó su primer Balón de Oro en 2008.</p></section>
 <section><h2>Carrera 4: Real Madrid</h2><p>Fichó en 2009 por una cifra récord en ese momento.</p></section>
 <section><h2>Carrera 5: Máximo Goleador</h2><p>Se convirtió en el máximo goleador histórico del Real Madrid.</p></section>
+<section><h2>Carrera 6: Champions League</h2><p>Ganó 5 Champions League en su carrera.</p></section>
 
 <section><h2>Biografía 1: Nombre Completo</h2><p>Cristiano Ronaldo dos Santos Aveiro.</p></section>
 <section><h2>Biografía 2: Nacimiento</h2><p>Nació el 5 de febrero de 1985 en Madeira, Portugal.</p></section>
