Pareja y actual esposa

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 <section><h2>Familia 1: Madre</h2><p>Maria Dolores es una figura muy importante en su vida.</p></section>
 <section><h2>Familia 2: Padre</h2><p>Su padre falleció en 2005.</p></section>
 <section><h2>Familia 3: Hermanos</h2><p>Mantiene una relación cercana con sus hermanos.</p></section>
-
+<section><h2>Familia 4: Pareja</h2><p>Su pareja actual es Georgina Rodríguez.</p></section>
 
 </body>
 </html>
