--- a/index.html
+++ b/index.html
@@ -55,6 +55,8 @@
 <section><h2>Carrera 7: Juventus</h2><p>Jugó en Italia entre 2018 y 2021.</p></section>
 <section><h2>Carrera 8: Regreso al United</h2><p>Volvió al Manchester United en 2021.</p></section>
 <section><h2>Carrera 9: Al-Nassr</h2><p>En 2023 fichó por el club saudí Al-Nassr.</p></section>
+<section><h2>Carrera 10: Selección Portuguesa</h2><p>Ganó la Eurocopa 2016 y la Nations League 2019 y 2025.</p></section>
+
 
 <section><h2>Biografía 1: Nombre Completo</h2><p>Cristiano Ronaldo dos Santos Aveiro.</p></section>
 <section><h2>Biografía 2: Nacimiento</h2><p>Nació el 5 de febrero de 1985 en Madeira, Portugal.</p></section>
