--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
 <section><h2>Familia 5: Primer Hijo</h2><p>Cristiano Ronaldo Jr. nació en 2010.</p></section>
 <section><h2>Familia 6: Mellizos</h2><p>Eva y Mateo nacieron en 2017.</p></section>
 <section><h2>Familia 7: Alana Martina</h2><p>Nació en 2017.</p></section>
+<section><h2>Familia 8: Bella Esmeralda</h2><p>Nació en 2022.</p></section>
 </body>
 </html>
 
