Su vida privada y valores

--- a/index.html
+++ b/index.html
@@ -68,6 +68,9 @@
 <section><h2>Familia 6: Mellizos</h2><p>Eva y Mateo nacieron en 2017.</p></section>
 <section><h2>Familia 7: Alana Martina</h2><p>Nació en 2017.</p></section>
 <section><h2>Familia 8: Bella Esmeralda</h2><p>Nació en 2022.</p></section>
+<section><h2>Familia 9: Vida Privada</h2><p>Procura mantener equilibrio entre familia y fútbol.</p></section>
+<section><h2>Familia 10: Valores</h2><p>Promueve valores como el esfuerzo y la superación.</p></section>
+
 </body>
 </html>
 
