--- a/index.html
+++ b/index.html
@@ -70,6 +70,9 @@
 <section><h2>Familia 8: Bella Esmeralda</h2><p>Nació en 2022.</p></section>
 <section><h2>Familia 9: Vida Privada</h2><p>Procura mantener equilibrio entre familia y fútbol.</p></section>
 <section><h2>Familia 10: Valores</h2><p>Promueve valores como el esfuerzo y la superación.</p></section>
+<footer>
+    Proyecto académico sobre Cristiano Ronaldo | 2026
+</footer>
 
 </body>
 </html>
